--- a/knyga.sty
+++ b/knyga.sty
@@ -126,6 +126,7 @@
 
 %Aplinkos
 \newcounter{foo}[section]
+\swapnumbers
 \newtheorem*{teig}{Teiginys}
 \newtheorem*{thm}{Teorema}
 \newtheorem*{isv}{Išvada}
