--- a/skteorija.tex
+++ b/skteorija.tex
@@ -2475,524 +2475,4 @@ moduliu $4$ bus lygios $3$. Pažiūrėkime, kaip tai atrodo praktiškai.
  \end{enumerate}
 
 \newpage
-\section{Diofantinės lygtys}
-
-Lygtys yra vadinamos diofantinėmis, kai yra ieškoma jų sveikųjų
-sprendinių. Šiame skyrelyje apžvelgsime keletą metodų padedančiu jas
-spręsti. Atkreipsime dėmesį, kad, skirtingai nuo įprastų lygčių,
-'spręsti' dažniausiai yra bandyti įrodyti, kad lygtis sprendinių neturi,
-arba jei ir turi, tai labai specifinius.  
-
-\subsection{Dvi lygties pusės}
-
-Pradėsime nuo trijų pagrindinių principų, besiremiančių labai bendru
-pastebėjimu:
-
-\smallskip
-\begin{center}\emph{Lygybės abi pusės yra vienodo dydžio, vienodai skaidomos
-dauginamaisiais ir duoda vienodas liekanas dalijamos iš natūraliųjų
-skaičių.}\end{center}
-\smallskip
-
-\subsubsection{Dydis}
-
-Pradėkime nuo pavyzdžių. Išspręsime tris paprastas lygtis.
-\begin{pav} 
-  Raskite lygties $x^2 = x + 2$ sveikuosius sprendinius.
-\end{pav}
-
-\begin{sprendimas}
-  Ši lygtis yra kvadratinė, ir ją galima išspręsti įprastai, tačiau minutėlei tą
-  pamirškime ir pabandykime pasinaudoti tuo, kad kairioji pusė beveik visada yra didesnė
-  už dešiniąją. Įvertinkime - kai $x\geq 3$, tai $x^2 \geq 3x \geq x + 6 >
-  x+2$, o kai $x\leq -2$, tai $x^2 > 0 \geq x+2$, tad vienintėliai sveikieji
-  skaičiai, kurių negalėjome atmesti samprotaudami apie skirtingus lygties
-  pusių dydžius, yra $-1, 0, 1$ ir $2$. Lieka tik patikrinti, kurie iš jų
-  tinka, ir rasti, kad lygties sprendiniai yra $-1$ ir $2$. 
-\end{sprendimas}
-
-\begin{pav}
-  Raskite lygties $x^2 + y^2 = 100$ sveikuosius sprendinius.
-\end{pav}
-
-\begin{sprendimas}
-  Sveikųjų skaičių kvadratai yra visuomet neneigiami ir auga palyginti
-  sparčiai. Šios lygties atveju, kaip tik tuo ir pasinaudosime - jei $x$ arba
-  $y$ yra moduliu didesni už $10$, tai kairioji pusė tampa didesnė už
-  $100$. Atkreipę dėmesį į tai, kad jei $(x,y)$ yra sprendinys tai ir
-  $(\pm x,\pm y)$ yra sprendinys gauname, kad užtenka patikrinti $x$ 
-  reikšmes nuo $0$ iki $10$. Tai padaryti nesunku - randame, kad sprendiniai
-  bus $(0,10)$, $(6,8)$, $(8,6)$, $(10,0)$ su visomis skirtingomis ženklų
-  kombinacijomis. 
-\end{sprendimas}
-
-\begin{pav}
-  Raskite lygties $xy = x+y$ sveikuosius sprendinius.
-\end{pav}
-
-\begin{sprendimas}
-  Dviejų sveikųjų skaičių sandauga beveik visada yra didesnė už sumą.
-  Pasinaudosime tuo, tačiau pirmiausia atmeskime neigiamus atvejus. Aišku,
-  kad abu ir $x$, ir $y$, negali būti neigiami, nes tuomet sandauga bus
-  teigiama, o suma neigiama. Negali būti ir vienas neigiamas, vienas
-  teigiamas, pvz. $x>0$, $y<0$, nes tuomet $xy \leq y < y + x$. Tad ieškokime
-  sprendinių, kuriuose $x\geq 0$ ir $y\geq 0$ ir taip pat neprarasdami
-  bendrumo tarkime, kad $y$ yra nemažesnis nei $x$. Parodysime, kad
-  $x$ negali būti didesnis už $2$. Iš ties, jei $x\geq 3$, tai $xy \geq 3y >
-  y + x$. Vadinasi $x$ gali įgyti tik reikšmes $0$, $1$ ir $2$. Patikrinę
-  randame sprendinius $(0,0)$ ir $(2,2)$.
-\end{sprendimas}
-
-Bandant įvertinti reiškinių dydžius, natūraliai praverčia algebrinės
-nelygybės ir supratimas apie funkcijų didėjimą, argumentui artėjant į
-begalybę (pavyzdžiui, didesnio laipsnio daugianaris nuo kažkurios reikšmės
-visuomet įgis didesnes reikšmes už mažesnio laipsnio daugianarį). Puiki ir
-paprasta šių idėjų iliustracija - 1988 metų Lietuvos matematikos olimpiados
-uždavinys:
-\begin{pav} \text{\emph{[LitMo 1988]}} Išspręskite natūraliaisiais skaičiais lygtį
-  $3x^2 + 2y^2 = 4xy + 2x.$
-\end{pav}
-\begin{sprendimas}
-  Parodysime, kad kairioji pusė beveik visada yra didesnė už dešiniąją. Iš
-  ties - pagal aritmetinio-geometrinio vidurkio nelygybę $2x^2 +
-  2y^2 \geq 4xy$, ir $x^2 > 2x$, kai $x>2$. Vadinasi, lieka patikrinti tik
-  dvi reikšmes - $x=1$ ir $x=2$. Tinka tik antroji, randame sprendinį
-  $(2,2)$.
-\end{sprendimas}
-
-Dažniausiai, kaip ir turi būti olimpiadiniuose uždaviniuose, lygybės pusių
-dydžių skirtumo idėja būna užmaskuota ir reikia akylumo norint ją įžiūrėti.
-Pavyzdžiui:
-
-\begin{pav} \text{\emph{[LitKo 2009]}} Raskite lygties
-  $(a^2 - 9b^2)^2 - 33b = 16$ sveikuosius neneigiamus sprendinius.
-\end{pav}
-
-\begin{sprendimas}
-Šis uždavinys organizatoriams greičiausiai pasirodė kiek sunkokas, todėl
-olimpiadoje buvo suformuluotas kaip dviejų dalių, pirmoji iš kurių prašė
-įrodyti, kad visi sprendiniai tenkina nelygybę $|a-3b|\geq 1$. Įrodyti tai
-labai paprasta, tačiau įžiūrėti užuominą gerokai sunkiau. Paprasčiausia tai
-padaryti turbūt būtų išskaidant pirmąjį dėmenį dauginamaisiais: $(a^2 -
-9b^2)^2 = (a-3b)^2(a+3b)^2$, tuomet
-$$(a-3b)^2(a+3b)^2 \geq (a+3b)^2\geq 9b^2.$$
-Vadinasi, kairioji lygties pusė yra ne mažesnė nei $9b^2 - 33b=(9b-33)b$, bet
-šio reiškinio reikšmė yra didesnė už $16$ su visomis $b$ reikšmėmis
-viršijančiomis $4$, vadinasi lieka patikrinti vos keletą reikšmių.
-
-Tačiau atidėkime šį sprendimą į šalį ir dar kartą pažvelkime į lygtį,
-bandydami kiek kitaip įvertinti kairiosios pusės dydį. Priežastis, dėl
-kurios $(a^2-9b^2)^2$ yra beveik visada daug didesnis už $33b$ yra
-ta, kad skirtumas tarp kvadratų yra pakankamai didelis. Išties, jei
-$a^2$ nėra lygus $9b^2$, tai arčiausiai (tuomet skirtumas mažiausias) jis
-gali būti tik tuomet, kai yra artimiausiai esantis kvadratas. O
-artimiausias kvadratas yra $(3b-1)^2$, bet net tuomet skirtumas visvien yra
-$6b-1$, o $(6b-1)^2 - 33b$ yra didesnis už $16$ su visomis $b$ reikšmėmis
-didesnėmis už $1$! Lieka vos du atvejai, iš kurių gauname po sprendinį:
-$(4,0)$ ir $(4,1)$.
-\end{sprendimas}
-
-Viena (labai svarbi!) iš samprotavimo apie dydį variacijų -„įterpimo tarp
-kvadratų' triukas. Norint parodyti, kad sveikasis skaičius nėra kvadratas,
-užtenka parodyti, kad jis yra tarp dviejų gretimų kvadratų ir nė vienam iš
-jų nelygus. Ši strategija tinka, žinoma, ir aukštesniems laipsniams.
-
-\begin{pav} Raskite lygties $y^2 = x^2 + x + 1$ sveikuosius sprendinius.
-\end{pav}
-
-\begin{sprendimas}
-Kairioji lygties pusė yra kvadratas, o dešinioji beveik visada nėra, nes
-$x^2 < x^2 + x + 1 < (x+1)^2$ (arba $(x+1)^2 < x^2 + x + 1 < x^2$, jei $x$
-neigiamas).  Vienintelės $x$ reikšmės, su kuriomis šios nelygybės nėra
-teisingos yra $x=-1$ ir $x=0$, gauname sprendinius $(-1, \pm 1)$ ir $(0,
-\pm 1)$.
-\end{sprendimas}
-
-\subsubsection{Liekanos}
-
-Nagrinėjant lygtį moduliu pasirinkto skaičiaus, apribojimą, kad abi lygybės
-pusės turi duoti vienodą liekaną moduliu to skaičiaus, dažnai galima
-perkelti į apribojimą ieškomiems sprendiniams. Kartais tas apribojimas būna
-pakankamas, kad galėtume visiškai išspręsti lygtį, bet dažniau jis tampa
-pagalbine informacija, kuri tampa naudinga sujungus ją su kitomis idėjomis.
-Pradėkime nuo paprasčiausių atvejų, kai nagrinėjant lygtį moduliu tinkamai
-parinkto skaičiaus ji išsisprendžiama iki galo.
-
-\begin{pav} Raskite lygties $x^2 = 3y - 1$ sveikuosius sprendinius.
-\end{pav}
-
-\begin{sprendimas}
-Nagrinėkime šią lygtį moduliu $3$. Norint, kad $(x,y)$ būtų sprendinys,
-abiejų lygybės pusių dalybos liekana iš $3$ turi būti vienoda. Dešinės
-pusės dalybos liekana bus $-1$, o kairės, priklausomai nuo $x$, arba
-$0$, arba $1$. Gavome, kad su jokiais $(x,y)$ jos nesutaps, todėl lygtis
-sprendinių neturi.
-\end{sprendimas}
-
-\begin{pav} Raskite lygties $x^2 = 2^n - 1$ sveikuosius sprendinius. 
-\end{pav}
-
-\begin{sprendimas}
-  Nagrinėkime lygtį moduliu $4$. Dešinė pusė, kad $n>1$, lygsta $-1$ moduliu
-  $4$, o kairė $0$ arba $1$. Kadangi liekanos nesutampa, tai lieka tik
-  atvejai $n\leq 1$, kuriuos patikrinę ($n$ negali būti neigiamas, nes
-  tuomet $2^n$ nebūtų sveikasis) randame sprendinius $n=1, x=\pm 1$ ir
-  $n=0, x=0$. 
-\end{sprendimas}
-
-\begin{pav} Raskite lygties $2 + x^2 + x^3 = 6^n$ sveikuosius sprendinius
-\end{pav}
-
-\begin{sprendimas}
-  Nagrinėkime lygtį moduliu $3$ arba moduliu $5$, arba moduliu $7$. Visais
-  trimis atvejais lengva įsitikinti, kad abi pusės duoda skirtingas
-  liekanas.
-\end{sprendimas}
-
-Kaip jau užsiminėme, lygties nagrinėjimas moduliu (arba sprendimas moduliu)
-dažniausiai yra tik dalis sprendimo. Pavyzdžiui:
-
-\begin{pav}
-  \text{\emph{[Lietuvos TST 2009]}} Raskite lygties $x^3 + x^2 =
-  16 + 2^y$ natūraliuosius sprendinius.
-\end{pav}
-
-\begin{sprendimas}
-  Nagrinėkime lygtį moduliu $7$. Kairioji pusė gali įgyti liekanas $0, 1,
-  2, 3, 5$, o dešinioji $3, 4$ ir $6$. Vienintėlė bendra liekana yra $3$, ir
-  ji įgyjama kai $y$ dalijasi iš $3$. Panaudokime gautą informaciją -
-  pažymėkime $y=3a$ ir perrašykime lygtį kaip $$(2^{a})^3 = x^3 + x^2 -
-  16.$$ Lieka pastebėti, kad galime pritaikyti įterpimo tarp kubų įdėją: su
-  visais $x>4$ turime $$x^3 < x^3 + x^2 -16 < (x+1)^3,$$ vadinasi, lieka
-  patikrinti tik keturias $x$ reikšmes. Randame vienintelį sprendinį
-  $(4,6)$.
-\end{sprendimas}
-
-\begin{pav}
-  \text{\emph{[MEMO 2009, Aivaras Novikas]}} Raskite lygties $2^x + 2009 =
-  3^y5^z$ neneigiamus sveikuosius sprendinius.
-\end{pav} 
- 
-\begin{sprendimas}
-  Pirmiausia įsitikinkime, kad $x$ negali būti mažesnis už $3$. Išties -
-  įstačius reikšmes $0, 1, 2$ kairiojoje pusėje gauname $2010, 2011,
-  2013$ ir nė vienas iš šių skaičių neišsiskaido tik į trejeto ir penketo
-  laipsnius. Tad tarkime, kad $x\geq 3$. Įrodysime, kad visi trys
-  $x, y, z$ turi būti lyginiai.
-  \begin{itemize}
-    \item[$x$ -] Jei $y>0$, tai nagrinėkime lygtį moduliu $3$ gausime
-      $(-1)^x - 1 \equiv 0$, vadinasi $x$ lyginis. Jei $y=0$, tai
-      $z>0$, tuomet nagrinėkime lygtį moduliu $5$. Gausime $2^x - 1 \equiv
-      0$, vadinasi $x$ dalijasi iš $4$, t.y. yra lyginis.
-    \item[$y$ -] nagrinėkime lygtį moduliu $4$. Kadangi $x>2$, tai gausime
-      $1 \equiv (-1)^y$, vadinasi $y$ lyginis.
-    \item[$z$ -] nagrinėkime lygtį moduliu $8$. Kadangi $x>2$ ir $y$ lyginis,
-      tai gausime $1 \equiv 5^z$, vadinasi $z$ lyginis.
-  \end{itemize}
-  Pažymėję $x=2a$, $y=2b$, $z=2c$ galime lygtį pertvarkyti į $$2009 =
-  (3^b5^c - 2^a)(3^b5^c + 2^a).$$ Kadangi $2009$ išsiskaido kaip $7^2\cdot
-  41$, tai į dviejų dauginamųjų sandaugą galime jį išskaidyti tik trim
-  būdais: $1\cdot 2009$, $7\cdot 287$ ir $41\cdot 49$. Vienintelis
-  išskaidymas, kurio dauginamieji skiriasi per dvejeto laipsnį yra
-  $41\cdot 49$, iš kur randame vienintėlį sprendinį $(4,4,2)$. 
-\end{sprendimas}
-
-Lygties sprendimą moduliu visuomet verta prisiminti sprendžiant diofantines
-lygtis ir ypač tas, kuriose iš pirmo žvilgsnio nesimato jokių silpnų vietų.
-Neretai verta spręsti lygtį moduliu nedidelių skaičių (pvz. $2, 3, 4, 5, 7,
-8, 9$) ir akylai stebėti gaunamą informaciją. Taip pat visuomet verta gerai
-įsižiūrėti į lygtį, kartais koeficientai ar dideli laipsniai gali
-pasufleruoti skaičių, moduliu kurio pavyks išpešti ką nors vertingo. 
-
-Pastebėsime, kad sprendimas moduliu dažnai būna sėkmingas, jei viena arba
-abi lygties pusės įgyja nedaug liekanų moduliu nagrinėjamo skaičiaus. Kiek
-liekanų įgyja reiškiniai pavidalo $x^k$ (kur $x$ kintamasis) kartais padeda
-įvertinti liekanų grupių teorija. Prisiminkime, kad liekanų grupės moduliu
-pirminio $p$ eilė yra $p-1$, o moduliu sudėtinio $n$ yra $\varphi(n)$. Jei
-$p-1$ (ar $\varphi(n)$) ir $k$ didžiausias bendras daliklis yra didelis, tai
-tuomet $x^k$ įgis nedaug reikšmių moduliu $p$ (ar $n$). Konkrečiau:
-
-\begin{itemize}
-  \item[$p=3$ -] liekanų grupės eilė $2$ - $x^2$ (ir kiti lyginiai
-    laipsniai) įgys $2$ liekanas iš $3$ 
-  \item[$n=4$ -] liekanų grupės eilė $2$ - $x^2$ įgis $2$ liekanas iš $4$
-  \item[$p=5$ -] liekanų grupės eilė $4$ - $x^4$ įgis $2$ liekanas iš $5$
-  \item[$p=7$ -] liekanų grupės eilė $6$ - $x^6$ įgis $2$, $x^3$ įgis $3$ liekanas iš $7$
-  \item[$n=8$ -] liekanų grupės eilė $4$ - $x^4$ įgis $2$, $x^2$ įgis $3$ liekanas iš $8$
-  \item[$n=9$ -] liekanų grupės eilė $6$ - $x^6$ įgis $2$, $x^3$ įgis $3$ liekanas iš $9$
-  \item[$p=11$ -] liekanų grupės eilė $10$ - $x^{10}$ įgis $2$, $x^5$ įgis $3$ liekanas iš $11$
-\end{itemize}
-
-Žiūrint iš šio taško, 1998 metų Balkanų Matematikos Olimpiados uždavinys
-atrodo labai paprastas:
-\begin{pav} \text{\emph{[BMO 1998]}} Parodykite, kad lygtis $x^2 + 4 = y^5$ neturi
-  sveikųjų sprendinių.
-\end{pav}
-
-\begin{sprendimas}
-  Atkreipkime dėmesį į $y^5$. Šis reiškinys įgis nedaug reikšmių moduliu
-  $11$, o tiksliau, kadangi $y^{10} \equiv 0,1 \m{11}$, tai $y^5 \equiv 0,
-  -1, 1 \m{11}$. Tad spręskime lygtį moduliu $11$ - $x^2$ įgys reikšmes
-  $0, 1, 4, 9, 5, 3$, todėl kairioji pusė įgis reikšmes $4, 5, 8, 2, 9, 7$.
-  Nei viena iš jų nėra lygi $0, 1$ ar $-1$, vaidinasi lygtis sprendinių
-  neturi.
-\end{sprendimas}
-
-\subsubsection{Skaidymasis}
-
-Vėl pradžiai pateiksime porą paprastų pavyzdžių.
-
-\begin{pav} Raskite visus sveikuosius lygties $xy = x + y$ sprendinius.
-\end{pav}
-
-\begin{sprendimas}
-  Vienas iš būtinų įgūdžių norint sėkmingai taikyti skaidymosi idėjas
-  yra skaidymas dauginamaisiais. Pažvelkime į du skirtingus šios jau
-  matytos lygties
-  pertvarkymus: $(x-1)(y-1) = 1$ ir $x(y-1) = y$. Pirmuoju atveju lygtis iš
-  karto išspręsta - jei dviejų sveikųjų skaičių sandauga lygi $1$, tai jie
-  arba abu lygūs $1$, arba $-1$. Antrasis išskaidymas yra iš pirmo žvilgsnio
-  prastesnis, bet įdomesnis: kadangi $y-1$ ir $y$ yra tarpusavyje
-  pirminiai, tai bet koks $y-1$ daliklis dalins kairę lygybės pusę, bet
-  nedalins dešinės. Vadinasi $y-1$ negali turėti jokių daliklių, todėl
-  yra lygus $1$ arba $-1$. Gauname sprendinius $(0, 0)$ ir $(2, 2)$.  
-\end{sprendimas}
-
-\begin{pav} Raskite visus sveikuosius lygties $x^2 = 2^n + 1$ sprendinius.
-\end{pav}
-
-\begin{sprendimas}
-  Pastebėkime, kad jei $(x,n)$ yra sprendinys, tai ir $(-x,n)$ bus
-  sprendinys, tad ieškokime tik teigiamų $x$.
-
-  Išskaidykime dauginamaisiais: $(x-1)(x+1) = 2^n$. Dešinioji pusė yra
-  dvejeto laipsnis, todėl kairiosios pusės abu dauginamieji taip pat turi
-  būti dvejeto laipsniai. Tačiau vienintėliai dvejeto laipsniai, tarp kurių
-  skirtumas yra du (o būtent toks skirtumas yra tarp daugiklių), yra
-  $2$ ir $4$, vadinasi $x=3$, $n=3$.
-
-  Alternatyviai galima samprotauti taip: kadangi didžiausias $x-1$ ir
-  $x+1$ bendras daliklis yra nedidesnis už $2$, tai vienas iš dauginamųjų
-  dalinsis daugiausia tik iš $2^1$, vadinasi, bus lygus $2$ arba $1$,
-  vadinasi $x$ lygus $0, 1, 2$ arba $3$. Iš jų tinka tik $x=3$.
-\end{sprendimas}
-
-Kaip jau buvo matyti praeitos dalies pavyzdyje iš MEMO 2009 olimpiados,
-ne visuomet iš karto pavyksta išskaidyti lygtį dauginamaisiais - kartais
-pirmiausia reikia gauti papildomos informacijos apie ieškomus sprendinius.
-Taip pat ne visuomet aišku, ką daryti išskaidžius. Bendros strategijos
-greičiausiai nėra, bet visuomet verta atkreipti dėmesį į dauginamųjų bendrus
-daliklius. Dažnai pastebėjus, kad jie jų neturi (arba jie labai riboti) galima
-pasistūmėti į priekį. 
-
-\begin{pav} \text{\emph{[IMO 2006]}} Raskite lygties $1 + 2^x + 2^{2x+1} = y^2$
-  sveikuosius sprendinius.
-\end{pav}
-Pirmiausia pastebėkime, kad $x$ negali būti mažesnis už $-1$, nes tuomet
-kairė pusė nebus sveikasis skaičius. Patikrinę $x$ reikšmes nuo
-$-1$ iki $2$ randame vienintelį sprendinį $(0, \pm 2)$, tad tarkime, kad
-$x\geq 3$ ir $y>0$ (iš sprendinio $(x,y)$ gausime ir sprendinį $(x,
--y)$). 
-
-Išskaidykime dauginamaisiais: $$2^x(2^{x+1} +1) = (y-1)(y+1).$$
-Kadangi $\dbd(y-1, y+1) \leq 2$, o sandauga $(y-1)(y+1)$ dalijasi iš
-$2^x$, tai bent vienas iš dauginamųjų dalinisis iš $2^{x-1}$. Atkreipkite
-dėmesį, kad $y\pm 1$ negali būti daug kartų didesnis už $2^{x-1}$, nes
-tuomet dešinėje pusė bus didesnė už kairiąją. Lieka viską tvarkingai
-pabaigti. Nagrinėkime du atvejus:
-\begin{itemize}
-  \item[$2^{x-1}|y-1$ -] pažymėję $y-1 = a2^{x-1}$ ir įstatę į lygtį
-    gausime $2^x + 2^{2x+1} = a2^{x-1}(a2^{x-1} + 2)$ arba $1 + 8\cdot
-    2^{x-2} = a^2 2^{x-2} + a.$ Aišku, kad $a<3$, bet $a=1$ ir $a=2$
-    netinka.
-  \item[$2^{x-1}|y+1$ -] pažymėję $y+1 = a2^{x-1}$ ir įstatę į lygtį
-    gausime $1+8\cdot 2^{x-2} = a^2 2^{x-2} - a$. Aišku, kad $a<4$,
-    patikrinę mažesnes reikšmes randame, kad tinka $a=3$, tuomet $x=4$ ir
-    $y=23$. 
-\end{itemize}
-Vadinasi, visi lygties sprendiniai yra $(0, \pm 2)$ ir $(4, \pm 23)$.
-
-\begin{pav} \text{\emph{[BMO 2009]}} Raskite lygties $3^x - 5^y = z^2$ sveikuosius
-  teigiamus sprendinius.
-\end{pav}
-
-\begin{sprendimas}
-  Spręskime lygtį moduliu $4$. Kairė pusė lygsta $(-1)^x - 1$, o dešinė
-  $0$ arba $1$. Norint, kad jos būtų lygios $x$ turi būti lyginis. Pažymėję
-  $x=2a$ gausime $$-5^y = (z-3^a)(z+3^a).$$
-  Kadangi $\dbd(z-3^a, z+3^a)|2\cdot 3^a$, tai vienas iš dauginamųjų
-  nesidalins iš $5$, vadinasi, bus lygus $\pm 1$. Tačiau $z+3^a > 3$, todėl
-  lieka vienintelis variantas $z - 3^a = -1$ - gauname lygtį $$5^y = 2\cdot
-  3^a - 1.$$
-  Pastebėkime, kad $a=1, y=1$ yra sprendinys. Jei $a>1$, tai spręsdami
-  moduliu $9$ gausime $5^y \equiv -1$, todėl $y$ dalijasi iš $3$. Tačiau
-  tuomet $5^y + 1$ dalinsis iš $7$, o $2\cdot 3^a$ nesidalins. Radome, kad
-  lygtis turi vienintelį sprendinį $(2,1,2)$.
-\end{sprendimas}
-
-Retais atvejais pavyksta panaudoti elegantiškas idėjas apie kai kurių
-reiškinių pirminius daliklius. Pavyzdžiui, iš kvadratinių liekanų skyrelio
-žinome, kad $x^2 + a$ negali turėti pirminio daliklio, su kuriuo
-$\lez{-a}{p} = -1,$ taip pat kaip ir dviejų kvadratų suma negali dalintis iš
-pirminio skaičiaus, lygstančio $3$ moduliu $4$, nelyginio laipsnio.
-
-\begin{pav} \text{\emph{[IMO Longlist 1984]}}
-  Įrodykite, kad lygtis $4mn - m - n = x^2$ neturi sveikųjų sprendinių.
-\end{pav}
-
-\begin{sprendimas}
-  Išskaidykime dauginamaisiais: $$(4m-1)(4n-1) = 4x^2 + 1.$$ Kairėje pusėje
-  esantys dauginamieji lygsta $3$ moduliu $4$, vadinasi dalijasi bent iš
-  vieno pirminio $p$, kuris irgi lygsta $3$ moduliu $4$. Tačiau dešinė
-  pusė tokio pirminio daliklio turėti negali, nes tuomet $(2x)^2 \equiv -1
-  \m{p}$, ko negali būti, nes $-1$ yra kvadratinė liekana tik moduliu
-  pirminių, kurie lygsta $1$ moduliu $4$.
-\end{sprendimas}
-
-\subsubsection{Uždaviniai}
-
-\begin{enumerate}
-  \item Raskite lygties $x^2 = 200 + 9y$ sveikuosius sprendinius.
-    %Nagrinėkime lygtį moduliu $3$. Gausime $x^2 \equiv 2 \m{3}$, o taip
-    %būti negali. Vadinasi lygtis sveikųjų sprendinių neturi.
-  \item Raskite lygties $x^2 = 100 + y^2$ sveikuosius sprendinius.
-    %Ieškokime tik teigiamų sprendinių, nes radę juos, rasime ir neigiamus.
-    %Išskaidykime dauginamaisiais: $(x-y)(x+y)=100$. Kadangi $x-y$ ir $x+y$
-    %yra vienodo lyginumo, ir jų sandauga lygi $100$, tai jie tegali būti
-    %lygūs $2$ ir $50$ arba $10$ ir $10$. Gauname sprendinius $(26,24)$ ir 
-    %$(10,0)$. Lieka tik pridurti, kad šie sprendiniai tiks ir paimti su
-    %visomis įmanomomis ženklų kombinacijomis.
-  \item Raskite lygties $x^2 + y^2 = 4z + 3$ sveikuosius sprendinius.
-    %Nagrinėdami lygtį moduliu $4$ gauname, kad dviejų kvadratų suma turi
-    %būti lygi trims. Kadangi kvadratai moduliu $4$ įgyja tik liekanas
-    %$0$ ir $1$, tai taip niekada nebus. Lygtis sprendinių neturi.
-  \item Raskite lygties $x^2 + 2x = 4y + 2$ sveikuosius sprendinius.
-    %Pastebėkime, kad $x$ turi būti lyginis. Tačiau tuomet kairioji lygties
-    %pusė dalinsis iš $4$, o dešinioji - ne. Sprendinių nėra.
-  \item Raskite lygties $x^2 + y^2 = 2x + 3y + 4$ sveikuosius sprendinius.
-    %Pastebėkime, kad jei $x>2$ arba $x<0$, tai $x^2> 2x + 2$. Taip pat,
-    %jei $y>3$ arba $y<0$, tai $y^2 > 3y + 2$. Vadinasi, arba $x$ turi būti
-    %lygus $0, 1, 2$, arba $y$ turi būti lygus $0, 1, 2, 3$. Patikrinę
-    %randame sprendinius $(0,-1)$, $(0,4)$, $(2, -1)$ ir $(2, 4)$.
-  \item \text{[LitMo 1987]} Nurodykite natūraliųjų skaičių, didesnių už
-    $100$, trejetą $(x, y, z)$, tenkinantį lygybę $x^2 + yz^2-xy-xz^2 =
-    1987.$
-    %Išskaidykime dauginamaisiais: $(x-y)(x-z^2) = 1987.$ Iš čia nesunku
-    %rasti didelį sprendinį, pvz $(100^2 + 1,100^2 - 1986, 100)$.	
-  \item Raskite lygties $2^x = 3^y + 1$ sveikuosius sprendinius.
-    %$3^y$ moduliu $8$ lygsta tik $3$ arba $1$, tad lygtis neturės
-    %sprendinių su $x\geq 3$. Patikrinę mažesnes reikšmes randame
-    %sprendinius $(2,1)$ ir $(1,0)$.
-  \item Raskite lygties $2^x = 3^y - 1$ sveikuosius sprendinius.
-    %Pastebėkime, kad jei $x>1$, tai $y$ turi būti lyginis, o tuomet,
-    %pažymėję $y=2z$, galime išskaidyti lygties dešiniąją pusę : $2^x =
-    %(3^z - 1)(3^z + 1)$. Vienas iš dauginamųjų nesidalins iš $4$ todėl
-    %turės būti lygus dviems. Gauname sprendinius $(3,2)$ ir (iš atvejo
-    %$x=1$) $(1,1)$.
-  \item \text{[LitMo 1988]} Išspręskite natūraliaisiais skaičiais lygtį
-    $x^2 + (x+y)^2 = (x+9)^2$. 
-    %Kairioji pusė bus didesnė už dešiniąją, jei tik $y$ bus didesnis už
-    %$9$, todėl užtenka patikrinti devynias reikšmes. Tai padaryti paprasta
-    %persirašius lygtį kaip kvadratinę ($x^2 + x(2y-18) + y^2 - 81$) ir
-    %suskaičiavus diskriminantą - $4\cdot 9\cdot (18-2y)$. Tiks reikšmės
-    %$y=1$, $y=7$ ir $y=9$ (pastaroji netinka, nes $x$ turėtų būti
-    %$0$). Gausime sprendinius $(20,1)$ ir $(8,7)$. 
-  \item \text{[LitMo 1989]} Išspręskite lygtį $x^{2y} = 2^z - 1$
-    natūraliaisiais skaičiais.
-    %Kairioji lygybės pusė yra kvadratas, o dešinioji, jei $z>1$, duoda
-    %liekaną $3$ moduliu $4$. Vadinasi $z$ gali būti lygus tik vienam, iš
-    %kur randame sprendinius $(1,y,1)$, $y \in \N$.
-  \item \text{[LitMo 1989]} Išspręskite sveikaisiais skaičiais lygtį
-    $2x^2y^2 + y^2 - 6x^2 - 12 = 0.$
-    %Išskaidykime dauginamaisiais: $(y^2 - 3)(2x^2 + 1)=9$. Dauginamasis
-    %$2x^2 + 1$ dalo $9$ tik kai $x=0$, $x=\pm 1$ arba $x=\pm 2$. Tinka tik
-    %pastarasis, randame sprendinį $(\pm 2, \pm 2)$.
-  \item \text{[LitMo 1989]} Išspręskite natūraliaisiais skaičiais lygtį
-    $13x^2 + 17y^2 = 1989^2.$
-    %Išskaidę dauginamaisiais $1989 = 13\cdot17\cdot9$ matome, kad $x$ turi
-    %dalintis iš $17$, o $y$ iš $13$. Pakeitę $x=17a$, $y=13b$ gauname
-    %lygtį $17a^2 + 13b^2 = 17\cdot13\cdot 9^2$, iš kurios vėl gauname, kad
-    %$a=13k$, $b=17l$. Įstatę ir suprastinę gauname $13k^2 + 17l^2 = 81$.
-    %Pastaroji labai paprasta, randame, kad $k=1$, $l=2$, vadinasi pradinės
-    %lygties sprendinys bus $(17\cdot13, 2\cdot 17\cdot 13)$.
-  \item \text{[IMO Longlist 1972]} Raskite visus sveikuosius lygties
-    $1+x+x^2+x^3+x^4 = y^4$ sprendinius.
-    %Naudosime įterpimo tarp kvadratų (šiuo atveju ketvirtųjų laipsnių)
-    %triuką. Kai $x$ teigiamas, tai $x^4<1+x+x^2+x^3+x^4<(x+1)^4$,o kai
-    %$x$ neigiamas, tai $(x+1)^4<1+x+x^2+x^3+x^4\leq x^4$ (lygybė įgyjama
-    %tik kai $x=-1$). Vadinasi lieka patikrinti dvi reikšmes $x=0$,
-    %$x=-1$, iš kurių gauname sprendinius $(-1, \pm 1)$ ir $(0, \pm 1)$.
-  \item \text{[IMO Longlist 1977]} Raskite visus sveikuosius lygties 
-    $7a + 14b = 5a^2 + 5ab + 5b^2$ sprendinius.
-    %Dešinė lygties pusė beveik visuomet didesnė už kairiąją. Tą paprasta
-    %išnaudoti persirašius lygtį kaip kvadratinę ($5a^2 + a(5b-7)
-    %+5b^2-14b)$ ir suskaičiauvus diskriminantą: $-15(5b^2-14b) +49.$ Jis
-    %nebus neigiamas tik kai $b$ tenkins $0\leq b \leq 3$, patikrinę šias
-    %reikšmes gauname du sprendinius - $(0,0)$ ir $(-1, 3)$.
-  \item \text{[LitMo 1986]} Išspręskite lygtį $x^y = y^{x-y}$
-    natūraliaisiais skaičiais.
-    %Kadangi kairioji pusė sveikas skaičius, tai $x$ turi būti nemažesnis
-    %už $y$. Jei jie lygus, tai tinka tik $(1,1)$, tad tarkime, kad
-    %$x>y$. Tuomet gausime, kad $x-y$ turi būti didesnis už $y$, ir kad
-    %$y|x$. Pažymėję $x=ky$ gauname $(ky)^{y} = y^{(k-1)y}$, arba
-    %$k = y^{k-2}$. Ši lygtis turi tik du sprendinius $k=3,y=3$ ir
-    %$k=4, y=2$, nes jei $k>4$ tai $k<2^{k-2}\leq y^{k-2}$. Pakeitę atgal,
-    %gauname pradinės lygties sprendinius $(6,3)$ ir $(8,2)$.
-  \item \text{[LitMo 1987]} Išspręskite lygtį $6!x!=y!$ natūraliaisiais
-    skaičiais.
-    %Uždavinys ekvivalentus tokiam - išskaidykite $6!$ į paeiliui einančių
-    %skaičių sandaugą. Daugiausia jį galima išskaidyti į $6$
-    %dauginamuosius, tuomet gausime sprendinį $(1,6)$. Į penkis ir keturis
-    %dauginamuosius išskaidyti nepavyks, nes jei visi bus mažesni už
-    %$6$, tai sandauga bus per maža, o jei didesni, tai turės arba dalintis
-    %iš $7$ (arba $11$, arba $13$) arba sandauga jau bus per didelė. Į tris
-    %dauginamuosius išskaidyti galima - $6! = 8\cdot 9 \cdot 10$, į du ne
-    %($26\cdot27 < 720 < 27\cdot 28$), į vieną, aišku, galima. Randame dar
-    %du sprendinius: $(7,10)$ ir $(6!-1, 6!)$
-  \item \text{[LitKo 2007]} Raskite visus sveikųjų skaičių $x, y, z$ ir $t$
-    ketvertus $(x,y,z,t)$ tenkinančius lygtį $x^2 + y^2 + z^2 + t^2 = 3(x +
-    y + z + t)$.
-    %Sukelkime viską į vieną lygties pusę : $x^2 - 3x + y^2 - 3y + z^2 - 3z
-    %+ t^2 - 3t = 0$. Mažiausios reikšmės kurias gali įgyti reiškinys
-    %$x^2 - 3x$ yra $4, 0, -2$, o visos likusios ne mažesnės už dešimt.
-    %Susumavę gausime nulį tik arba atveju $0+0+0+0$ arba $0-2-2+4$, tad
-    %sprendiniai bus $(0,0,0,0)$ ir visos įmanomos kombinacijos iš $0$, $1$
-    %arba $2$, $1$ arba $2$, $-1$ arba $4$ (pvz. $(0,1,1,-1)$, $(4,2,0,1)$,
-    %\ldots).
-  \item Raskite visus natūraliuosius lygties $x^3 - y^3 = xy + 61$
-    sprendinius.
-    %Parodysime, kad kairioji lygties pusė yra beveik visuomet didesnė už
-    %dešiniąją. Kadangi $x>y$, tai $xy+61<x^2+61$. Iš kitos pusės,
-    %$x^3-y^3 \geq x^3 - (x-1)^3 = 3x^2 - 3x + 1$, kas yra daugiau už
-    %$x^2 + 61$, kai $x>6$. Vadinasi, lieka patikrinti tik keletą reikšmių,
-    %ką padarę randame vienintėlį sprendinį $(6,5)$.
-  \item \text{[JBMO 2009]} Raskite lygties $2^a 3^b + 9 = c^2$
-    natūraliuosius sprendinius.
-    %Jei $b=0$, tai lygtis užrašoma kaip $2^a = (c-3)(c+3)$. Vienintėliai
-    %dvejeto laipsniai besiskiriantys per $6$ yra $2$ ir $8$, randame
-    %sprendinį $(4,0,5)$. Tegu $b>0$, tuomet $c$ dalijasi iš trijų ir
-    %$b\geq 2$. Pažymėję $b-2 = d$, $c = 3n$ gauname $2^a3^d =
-    %(n-1)(n+1)$. Kadangi $\dbd(n-1, n+1) \leq 2$, tai vienas iš dauginamųjų
-    %nesidalija iš $3$. Tada jis arba yra lygus $1$, arba dalijasi iš
-    %$2$. Jei lygus vienetui, tai tuomet $n=2$, randame sprendinį $(0,3,6)$.
-    %Jei dalijasi iš dviejų, tai tuomet $n$ nelyginis ir $a\geq 2$. Pažymėję
-    %$n=2k-1$ ir $a-2 = e$ gauname $2^e3^d = k(k+1)$. Kadangi $k$ ir
-    %$k+1$ tarpusavyje pirminiai, tai arba $k=2^e$, $k+1=3^d$ arba $k=3^d$,
-    %$k+1 = 2^e$. Pirmu atveju gauname lygtį $3^d = 2^e+1$, antru $2^e = 3^d
-    %+ 1$.  
-  \item Raskite lygties $3^x - 2^y = 1$ natūraliuosius sprendinius.
-    %$3^x \equiv (-1)^x \m{4}$, todėl, jei $y>1$ ($y=1$ tinka, tuomet
-    %$x=1$), tai $x$ turi būti lyginis. Pažymėję $x=2a$ gauname lygtį
-    %$2^y = (3^a-1)(3^a+1)$. Abu dauginamieji esantys dešinėje pusėje turi
-    %būti dvejeto laipsniai, bet besiskiriantys per du yra tik $2$ ir
-    %$4$. Vadinasi $a=1$, $x=2$, $y=3$.
-  \item Raskite lygties $x^2 + 3 = 12y^3 - 16y + 1$ sveikuosius
-    sprendinius.
-    %Išskaidykime $x^3 = 4(y-1)(3y^2 + 3y -1)$. Kadangi su visomis $y$
-    %reikšmėmis $3y^2 + 3y - 1 \equiv 2 \m{3}$, tai jis turės pirminį
-    %daliklį duodantį liekaną $2$ moduliu $3$. Tačiau kairioji lygties pusė
-    %tokio daliklio turėti negali, nes $-3$ negali būti kvadratinė liekana
-    %moduliu pirminio $p \equiv 2 \m{3}$. Vadinasi, $3y^2 + 3y - 1$ turi
-    %būti lygus $-1$, todėl $y=0$ arba $y=-1$. Tinka tik pirmasis, randame
-    %sprendinį $(\pm 1,0)$. 
-\end{enumerate}
+\input{dlygtys}
