--- a/knyga.tex
+++ b/knyga.tex
@@ -1,12 +1,10 @@
-%\documentclass[a4paper,11pt,twoside]{book} %BW
 \documentclass[a4paper,11pt,oneside]{book} %Color
-
+\usepackage[color]{optional}
 \usepackage{knyga}
 \makeindex
 \begin{document}
 \frontmatter
 \includepdf[pages=1]{./iliustracijos/kitos/virselis.pdf} %Color
-%\includepdf[pages=1]{./iliustracijos/kitos/virselisBW.pdf} %BW
 \include{title}
 \addtocontents{toc}{\protect\thispagestyle{empty}}
 \tableofcontents
@@ -18,7 +16,7 @@
 \include{kombinatorikaC}
 %\include{geometrijaC}
 \include{sprendimaiC} 
-\include{literaturaC}
+\include{literatura}
 \backmatter
 %\addcontentsline{toc}{chapter}{Index} 
 %\printindex
