--- a/knygaBW.tex
+++ b/knygaBW.tex
@@ -1,11 +1,9 @@
-\documentclass[a4paper,11pt,twoside]{book}
-%\documentclass[a4paper,11pt,oneside]{book}
-
-\usepackage{knygaBW}
+\documentclass[a4paper,11pt,twoside]{book} %BW
+\usepackage[BW]{optional}
+\usepackage{knyga}
 \makeindex
 \begin{document}
 \frontmatter
-%\includepdf[pages=1]{./iliustracijos/kitos/virselis.pdf} %Color
 \includepdf[pages=1]{./iliustracijos/kitos/virselisBW.pdf} %BW
 \include{title}
 \addtocontents{toc}{\protect\thispagestyle{empty}}
