--- a/literatura.tex
+++ b/literatura.tex
@@ -2,10 +2,21 @@
 \addcontentsline{toc}{chapter}{Literatūra}
 \section*{Literatūra}
 
+\subsubsection{Bendra}
+
 \begin{itemize}
-  \item http://www.mathlinks.ro \quad (olimpiadinės matematikos forumas)
-  \item http://www.math.ca/crux/ \quad (olimpiadinės matematikos žurnalas)
-  \item http://www.math.ust.hk/excalibur/ \quad (olimpiadinės matematikos žurnalas)
+    \opt{color}{\item \url{http://www.mathlinks.ro} \quad (olimpiadinės
+    matematikos forumas)}
+    \opt{BW}{\item http://www.mathlinks.ro \quad (olimpiadinės
+    matematikos forumas)}
+    \opt{color}{\item \url{http://www.math.ca/crux/} \quad (olimpiadinės
+    matematikos žurnalas)}
+    \opt{BW}{\item http://www.math.ca/crux/ \quad (olimpiadinės
+    matematikos žurnalas)}
+    \opt{color}{\item \url{http://www.math.ust.hk/excalibur/} \quad
+    (olimpiadinės matematikos žurnalas)}
+    \opt{BW}{\item http://www.math.ust.hk/excalibur/ \quad
+    (olimpiadinės matematikos žurnalas)}
   \item Arthur Engel, \emph{Problem Solving Strategies}, Springer, 1998.
   \item Paul Zeitz, \emph{Art and Craft of Problem Solving}, Wiley, 2007.
   \item D. Djukic, V. Jankovic, I. Matic, N.Petrovic, \emph{The IMO
@@ -16,8 +27,10 @@
 \subsubsection{Skaičių teorija}
 
 \begin{itemize}
-  \item http://www.mathlinks.ro/index.php?f=456 \quad(Problems in Elementary
-    Number theory (PEN))
+    \opt{color}{\item \url{http://www.mathlinks.ro/index.php?f=456} \quad(Problems in Elementary
+    Number theory (PEN))}
+    \opt{BW}{\item http://www.mathlinks.ro/index.php?f=456 \quad(Problems in Elementary
+    Number theory (PEN))}
   \item T. Andreescu, D. Andrica, Z. Feng, \emph{104 Number Theory
     Problems}, Birkhauser, 2007.
   \item T. Andreescu, D. Andrica, \emph{An Introduction to Diophantine
@@ -38,8 +51,10 @@
     Techniques}, 2007.
   \item Tran Phuong, \emph{Diamonds in Mathematical Inequalities},
     Hanoi Publishing House, 2007.
-  \item Thomas J. Mildorf, \emph{Olympiad Inequalities}, 2006.\\
-    (http://www.artofproblemsolving.com/Resources/Papers/MildorfInequalities.pdf)
+\opt{color}{\item Thomas J. Mildorf, \emph{Olympiad Inequalities}, 2006.\\
+    (\url{http://www.artofproblemsolving.com/Resources/Papers/MildorfInequalities.pdf})}
+\opt{BW}{\item Thomas J. Mildorf, \emph{Olympiad Inequalities}, 2006.\\
+    (http://www.artofproblemsolving.com/Resources/Papers/MildorfInequalities.pdf)}
   \item T. Andreescu, V. Cartoaje, G. Dospinescu, M. Lascu, \emph{Old
     and New Inequalities}, GIL Publishing House, 2003.
   \item J. Michael Steele, \emph{The Cauchy-Schwarz Master Class},
