perrašyta programa prg.cpp. Ji nuo šiol generuoja ir BW sprendimų versiją, todėl prgBW.cpp pašalinta. Nauja prg.cpp versija nededa į sprendimų failus teksto, išskirto komandomis %%noparse ir %%parse. Pavyzdžiui, drakonų puotos skyrelio pavadinimo ir funkcinių lygčių be sprendimų (paskutiniosios skyrelyje funkcijų tipai).

--- a/flygtys.tex
+++ b/flygtys.tex
@@ -865,6 +865,7 @@ pakovoti dėl šių naudingų funkcijos savybių.
     %(f(x)-x)^2=0 \Rightarrow f(x)=x.$$
     %Jei $f(-1)=-1$, tai $x = \frac{1}{x}$ statome į $f(x)+f(-f(x))=-2x$ ir
     %analogiškai gauname $f(x) = -x$.
+%%noparse
   \item *Raskite visas funkcijas $f:\R\to\R$, kurios su visais realiaisiais
     $x$, $y$ tenkina $$f(xf(y))=(1-y)f(xy)+x^2y^2f(y).$$
   \item *Raskite visas funkcijas $f:\R^+\to\R^+$, kurios su visais
@@ -886,6 +887,7 @@ pakovoti dėl šių naudingų funkcijos savybių.
     teigiamais $x$, $y$ tenkina $$f\left(\frac{f(x)}{yf(x) + 1}\right) =
     \frac{x}{xf(y)+1}.$$
     %%Sudėtingas sprendimas "Nested fraction function equation"
+%%parse
 \end{enumerate}
 
 \newpage
