--- a/nelygybes.tex
+++ b/nelygybes.tex
@@ -1929,7 +1929,9 @@ spalvingai iliustruos mintį.
 \end{enumerate}
 
 \newpage
+%%noparse
 \subsection{Drakonų puota}
+%%parse
 
 Iš tamsiausių kerčių, tolimiausių užkampių susirinko jos ir jie pasirodyti
 vieni kitiems. Ne jėgos, o savo žaižaruojačios išvaizdos parodyti, emocijomis
